cabal-version:      1.24
name:               gödel-trees
version:            0.1.0.0
synopsis:           Bijections between structured data and numbers
homepage:           https://github.com/leftaroundabout/gödel-trees
license:            GPL-3
license-file:       LICENSE
author:             Justus Sagemüller
maintainer:         (@) jsag $ hvl.no
category:           Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  GödelNums
    build-depends:    base >=4.12 && <4.13
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite gödel-trees-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.12 && <4.13,
        gödel-trees
